@@ -20,6 +20,7 @@ dependencies {
   implementation "org.apache.lucene:lucene-core:${versions.lucene}"
 
   testImplementation(testArtifact(project(':x-pack:plugin:searchable-snapshots')))
+  testImplementation(testFixtures(project(':libs:native')))
   testImplementation(project(":test:framework")) {
     exclude group: 'org.elasticsearch', module: 'native'
   }
@@ -28,12 +29,18 @@ dependencies {
   }
 }
 
-// compileMain21Java does not exist within idea (see MrJarPlugin) so we cannot reference directly by name
-tasks.matching { it.name == "compileMain21Java" }.configureEach {
+tasks.named('compileJava').configure {
   options.compilerArgs << '--add-modules=jdk.incubator.vector'
-  // we remove Werror, since incubating suppression (-Xlint:-incubating)
-  // is only support since JDK 22
-  options.compilerArgs -= '-Werror'
+  options.compilerArgs << '--add-reads=org.elasticsearch.simdvec=jdk.incubator.vector'
+}
+
+tasks.named('javadoc').configure {
+  options.addStringOption("-add-modules", "jdk.incubator.vector")
+  options.addStringOption("-add-reads", "org.elasticsearch.simdvec=jdk.incubator.vector")
+}
+
+tasks.withType(CheckForbiddenApisTask).configureEach {
+  ignoreMissingClasses = true
 }
 
 tasks.named('test').configure {
